<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_gravity="center_vertical">

  <include layout="@layout/lce_loading_view"/>
  <include layout="@layout/lce_error_view"/>

  <LinearLayout
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/material_card_edge_margin"
      android:elevation="@dimen/cardview_default_elevation"
      android:orientation="vertical"
      tools:targetApi="lollipop">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
          android:id="@+id/volume_details_screen"
          android:layout_width="match_parent"
          android:layout_height="@dimen/issue_details_header_image_height"
          android:adjustViewBounds="true"
          android:contentDescription="@string/a11y_volume_cover"
          tools:src="@drawable/dummy_issue_cover"/>
        <!-- Issue info below -->

        <TextView
          android:id="@+id/volume_details_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/material_card_title_block_large_padding_top"
          android:paddingBottom="@dimen/material_card_title_block_large_padding_top"
          android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
          android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
          android:background="@color/colorPrimary"
          android:ellipsize="end"
          android:maxLines="2"
          android:textColor="@color/material_color_white"
          android:textSize="@dimen/material_card_title_block_large_title_text_size"
          tools:text="@string/dummy_volume_name"/>

        <GridLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/material_card_title_block_large_padding_top"
          android:paddingBottom="@dimen/material_card_title_block_large_padding_bottom"
          android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
          android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
          android:columnCount="2">

          <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_details_publisher"
            android:textSize="@dimen/material_card_title_block_small_text_size"/>

          <TextView
            android:id="@+id/volume_details_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
            android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
            android:textSize="@dimen/material_card_title_block_small_text_size"
            tools:text="@string/dummy_publisher_name"/>

          <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_details_year"
            android:textSize="@dimen/material_card_title_block_small_text_size"/>

          <TextView
            android:id="@+id/volume_details_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/material_card_title_block_large_subtitle_margin_top"
            android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
            android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
            android:textSize="@dimen/material_card_title_block_small_text_size"
            tools:text="@string/dummy_year"/>

        </GridLayout>

        <TextView
          android:id="@+id/volume_details_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/material_card_supporting_text_padding_top"
          android:paddingBottom="@dimen/material_card_supporting_text_padding_bottom"
          android:paddingStart="@dimen/material_card_supporting_text_padding_horizontal"
          android:paddingEnd="@dimen/material_card_supporting_text_padding_horizontal"
          android:textSize="@dimen/material_card_supporting_text_text_size"
          tools:text="@string/lorem_ipsum"/>

      </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:id="@+id/volume_details_issues_card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/material_card_edge_margin"
      android:elevation="@dimen/cardview_default_elevation"
      android:orientation="vertical"
      tools:targetApi="lollipop">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/material_card_title_block_large_padding_top"
          android:paddingBottom="@dimen/material_card_title_block_large_padding_bottom_last_block"
          android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
          android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
          android:background="@color/colorPrimary"
          android:text="@string/volume_details_other_issues"
          android:textColor="@color/material_color_white"
          android:textSize="@dimen/material_card_title_block_large_title_text_size"/>

        <android.support.v7.widget.RecyclerView
          android:id="@+id/volume_details_issues_view"
          android:scrollbarStyle="outsideOverlay"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:padding="@dimen/card_margin_value_half"
          android:clipToPadding="false"/>

      </LinearLayout>

    </android.support.v7.widget.CardView>

  </LinearLayout>

</FrameLayout>