<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="@dimen/card_margin_value_half"
  android:elevation="@dimen/cardview_default_elevation"
  android:orientation="vertical"
  tools:targetApi="lollipop">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
      android:id="@+id/volume_image_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <ImageView
        android:id="@+id/volume_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/a11y_volume_cover"
        tools:src="@drawable/dummy_issue_cover"/>
      <ProgressBar
        android:id="@+id/volume_cover_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/image_progressbar_padding"
        android:paddingBottom="@dimen/image_progressbar_padding"
        android:indeterminate="true"/>
    </FrameLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/material_card_supporting_text_padding_horizontal"
      android:paddingBottom="@dimen/material_card_supporting_text_padding_horizontal"
      android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
      android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
      android:orientation="vertical">

      <TextView
        android:id="@+id/volume_name"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="@dimen/material_card_title_block_small_text_size"
        tools:text="@string/dummy_volume_name"/>

      <TextView
        android:id="@+id/volume_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="@dimen/material_card_title_block_small_text_size"
        tools:text="@string/dummy_publisher"/>

      <TextView
        android:id="@+id/volume_issues_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/material_card_title_block_small_text_size"
        tools:text="@string/dummy_issues_count"/>

    </LinearLayout>
  </LinearLayout>

</android.support.v7.widget.CardView>